# shooterboi

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Doxyfile  LICENSE  README.md  build.rs  gun.vs.txt  index.html  raymarch.sprj  scene.sprj
assets/fonts/SpyAgency/: spyagency3_2.txt
assets/images/: title.psd
cmake/: ImGui.cmake  file_to_header.cmake
raymarch/: raymarch.sprj
raymarch/shaders/: common.glsl  raymarch_SimplePS.glsl
shaders/: POVPS.glsl
src/: Camera.hpp  Common.h  Engine.cpp  Engine.hpp  Game.cpp  Game.h  Game.hpp  Game.rs  InputProcessor.cpp  InputProcessor.h  InputProcessor.hpp  Main.cpp  RenderObjectData.hpp  RenderObjects.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  ShootRaycast.hpp  animation.rs  audio.rs  camera.rs  database.rs  enemy.rs  frustum.rs  game.rs  gui.rs  input_manager.rs  lib.rs  main.rs  main2.rs  main3.rs  maze.rs  physics.rs  scene.rs  state.rs  timer.rs  util.rs  window.rs
src/components/: mod.rs
src/enemy/: gunman.rs  mod.rs  swordman.rs
src/entity/: mod.rs  target.rs
src/entity/enemy/: gunman.rs  mod.rs  swordman.rs
src/gamemodes/: mod.rs
src/gui/: controls.rs  mod.rs  scene.rs
src/logic/components/: AudioSource.hpp  AudioSource3D.hpp  Collider.hpp  Enemy.hpp  Frustum.hpp  FrustumCullObject.hpp  GameMusic.hpp  Player.hpp  RenderObject.hpp  Renderable.hpp  RigidBody.hpp  SelfDestruct.hpp  Transform.hpp
src/logic/custom-components/player/: AudioSourceShoot.hpp  AudioSourceShooted.hpp
src/logic/systems/: Systems.cpp  Systems.hpp
src/renderer/: conrod_renderer.rs  crosshair.rs  game_renderer.rs  mod.rs  render_objects.rs  rendering_info.rs  vertex.rs
src/resources/: time.rs
src/scene/: after_game_scene.rs  classic_game_scene.rs  classic_game_scores_scene.rs  classic_score_scene.rs  dodge_and_destroy_game_scene.rs  dodge_and_destroy_score_scene.rs  elimination_game_scene.rs  elimination_score_scene.rs  exit_confirm_scene.rs  game_score_scene.rs  game_selection_scene.rs  guide_scene.rs  hit_and_dodge_scene.rs  hit_and_dodge_score_scene.rs  main_menu_scene.rs  mod.rs  pause_scene.rs  score_history_scene.rs  score_scene.rs  scores_scene.rs  settings_scene.rs
src/shaders/: MainPS.glsl  PlayerViewPS.glsl  common.glsl  crosshair.frag  crosshair.vert  hash.glsl  main.frag  main.frag.spv  main.vert  main.vert.spv  main2.frag  main2.frag.spv  main_PS.glsl.backup  screen.frag  screen.frag.spv  sdf.glsl  terrain_gen.frag
src/systems/: container.rs  crate_box.rs  gunman.rs  mod.rs  player.rs  player_movement.rs  setup_player_collider.rs  shoot_ray.rs  shootanim.rs  spawn_target.rs  swordman.rs  target.rs  update_player_movement.rs  wall.rs
src/utils/: Converter.hpp
