[package]
name = "shooterboi"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
instant = "0.1"
pollster = "0.2.4"
nalgebra = "0.29.0"
bytemuck = { version = "1.7.2", features = ["derive"] }
ambisonic = { git = "https://github.com/andraantariksa/ambisonic.git" }
rodio = { version = "0.14.0", default-features = false, features = ["vorbis", "flac", "wav"] }
bincode = "1.3.3"
rapier3d = "0.11.1"
serde = { version = "1", features = ["derive"] }
log = "0.4.14"
hecs = "0.6.5"
rand = { version = "0.8", features = ["small_rng"] }
conrod_winit = "0.75"
conrod_wgpu = "0.76"
conrod_core = "0.76"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gluesql = { git = "https://github.com/gluesql/gluesql.git", default-features = false, features = ["memory-storage", "alter-table", "sorter"] }
uuid = { version = "0.8", features = ["wasm-bindgen", "v4"] }
wgpu = { version = "0.11", features = ["webgl", "spirv"] }
web-sys = "0.3.55"
image = { version = "0.23.14", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"] }
winit = { version = "0.25.0", features = ["web-sys"] }
console_log = "0.2.0"
console_error_panic_hook = "0.1.7"
#wasm-bindgen-futures = "0.4.28"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gluesql = { git = "https://github.com/gluesql/gluesql.git" }
wgpu = { version = "0.11", features = ["spirv"] }
image = "0.23.14"
winit = "0.25.0"
env_logger = "0.9.0"

[build-dependencies]
shaderc = "0.7.2"
glob = "0.3.0"

#[patch.crates-io]
#window_clipboard = { git = "https://github.com/andraantariksa/window_clipboard.git", rev = "0f74d591986c71e0786128827c98f17c0054aadf" }

#[target.'cfg(target_arch = "wasm32")'.patch.crates-io]
#winit = { version = "0.25.0", features = ["web-sys"] }
