[package]
name = "shooterboi"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
instant = "0.1"
pollster = "0.2.4"
nalgebra = "0.29.0"
rodio = { version = "0.15.0", default-features = false, features = ["vorbis", "flac", "wav"] }
rapier3d = "0.11.1"
#serde = { version = "1", features = ["derive"] }
log = "0.4.14"
hecs = "0.7.3"
rand = { version = "0.8", default-features = false, features = ["small_rng", "getrandom"] }
conrod_winit = "0.75"
conrod_wgpu = "0.76"
conrod_core = "0.76"
getrandom = { version = "0.2", features = ["js"] }
bitflags = "1.3.2"
crossbeam = { version = "0.8.1", default-features = false, features = ["crossbeam-channel"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4", default-features = false, features = ["wasmbind"] }
gluesql = { version = "0.9.0", default-features = false, features = ["memory-storage", "alter-table", "sorter"] }
uuid = { version = "0.8", features = ["wasm-bindgen", "v4"] }
wgpu = { version = "0.11", features = ["webgl", "spirv"] }
web-sys = "0.3.55"
image = { version = "0.23.14", default-features = false, features = ["jpeg", "png"] } # , "gif", "ico", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"
winit = { version = "0.25.0", features = ["web-sys"] }
console_log = "0.2.0"
console_error_panic_hook = "0.1.7"
#wasm-bindgen-futures = "0.4.28"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
gluesql = "0.9.0"
wgpu = { version = "0.11", features = ["spirv"] }
image = { version = "0.23.14", default-features = false, features = ["jpeg", "png", "jpeg_rayon"] }
winit = "0.25.0"
env_logger = "0.9.0"

[build-dependencies]
shaderc = "0.7"
glob = "0.3.0"

[dev-dependencies]
criterion = "0.3"
